java2d readme update